fixing links for git pages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             href="assets/images/favicon_io/favicon-32x32.png">
 
         <link rel="manifest" href="/site.webmanifest">
-        <link rel="stylesheet" href="/assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/style.css">
         <title>Space Spondoolies!</title>
 
     </head>
@@ -65,8 +65,8 @@
             <h2>Space Spondoolies!</h2>
             <h3>Terms and Conditions</h3>
             <p>
-                Hello Human, when you press the button you are gonig to space. Get a high score
-                and you spend enteritny onboard our luxury Mother-Ship. Get a low score, 
+                Hello Human, when you press the button you are going to space. Get a high score
+                and you spend eternity onboard our luxury Mother-Ship. Get a low score, 
                 you still go to space, in our catering ship.
                 <s>Yummy!!</s>
             </p>
@@ -85,7 +85,7 @@
         </footer>
 
         <!--JavaScript Link-->
-        <script src="/assets/javascript/main.js"></script>
+        <script src="assets/javascript/main.js"></script>
 
     </body>
 
