added class.list.add to hide a button

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 
         <!-- Score Board-->
         <article id="div-score" class="box-half box-left">
-            <h2>Spondollies:</h2>
+            <h2>Space Spondollies:</h2>
             <h3 id="total-score">0</h3>
         </article>
 
         <!-- Status Report-->
         <article id="div-status" class="box-half box-right">
             <h2>Status Report:</h2>
-            <p id="status-report">Updating...</p>
+            <p id="status-report">Updating.....</p>
         </article>
 
         <!--Buttons-->
