--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!-- Score Board-->
     <article id="div-score" class="box-half box-left">
-      <h2>Space Spondollies:</h2>
+      <h2>Space Spondoolies:</h2>
       <h3 id="total-score">0</h3>
     </article>
 
@@ -56,6 +56,7 @@
     <article id="div-status" class="box-half box-right">
       <h2>Status Report:</h2>
       <p id="status-report">Updating.....</p>
+      <h1 id="bonus-points" class="bonus-hide">Bonus Points!</h1>
     </article>
 
     <!--Buttons-->
@@ -70,7 +71,7 @@
       Reload
     </button>
 
-    <!--Terms and Conditions-->
+    <!--Alien Terms and Conditions-->
     <section>
       <h2>Space Spondoolies!</h2>
       <h3>Terms and Conditions</h3>
@@ -84,6 +85,7 @@
       <ul>
         <li>Even Dice Score - Plus Points</li>
         <li>Odd Dice Score - Minus Points</li>
+        <li>Throw a Double - Double Points</li>
         <li>10,000 Space Spondoolies - A life time of luxury awaits you!</li>
         <li>
           Hit -10,000 - It's the Catering Ship. (The Star-Ship <em>Yum Yum</em>)
