--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
         Hello Human, when you press the button you are going to space. Get a
         high score and you spend eternity onboard our luxury Mother-Ship. Get a
         low score, you still go to space, in our catering ship.
-        <s>Yummy!!</s>
+        <em>Yummy!!</em>
       </p>
 
       <ul>
         <li>Even Dice Score - Plus Points</li>
         <li>Odd Dice Score - Minus Points</li>
-        <li>Throw a Double - Double Points</li>
+        <li>Throw a Double - Extra 500 Points</li>
         <li>10,000 Space Spondoolies - A life time of luxury awaits you!</li>
         <li>
           Hit -10,000 - It's the Catering Ship. (The Star-Ship <em>Yum Yum</em>)
@@ -96,7 +96,7 @@
 
     <!--Footer-->
     <footer>
-      <h3>[Some Day Soon A Space Ship Is Coming For You!]</h3>
+      <h2>[Some Day Soon A Space Ship Is Coming For You!]</h2>
     </footer>
 
     <!--JavaScript Link-->
