Code tidyup with prettier

--- a/index.html
+++ b/index.html
@@ -55,32 +55,41 @@
     <!-- Status Report-->
     <article id="div-status" class="box-half box-right">
       <h2>Status Report:</h2>
-      <p id="status-report">Enter your name, or just be a boring Human....Press: Spin The Dice....Updating.....</p>
+      <p id="status-report">
+        Enter your name, or just be a boring Human....Press: Spin The
+        Dice....Updating.....
+      </p>
       <h1 id="bonus-points" class="bonus-hide">Bonus Points!</h1>
     </article>
 
     <!--Buttons-->
     <article class="box-full">
-    <button data-type="spin" id="spin-the-dice" class="my-button">
-      Spin The Dice
-    </button>
+      <button data-type="spin" id="spin-the-dice" class="my-button">
+        Spin The Dice
+      </button>
 
-    <button
-      onClick="window.location.reload(true);"
-      id="hide-button"
-      class="my-button-hide my-button"
-    >
-      Reload
-    </button>
+      <button
+        onClick="window.location.reload(true);"
+        id="hide-button"
+        class="my-button-hide my-button"
+      >
+        Reload
+      </button>
 
-      <input id="user-name" class="" type="text" id="fname" name="fname" value="Human"><br>
-
-  </article>
+      <input
+        id="user-name"
+        class=""
+        type="text"
+        id="fname"
+        name="fname"
+        value="Human"
+      /><br />
+    </article>
 
     <!--Alien Terms and Conditions-->
     <section>
       <h2>Space Spondoolies!</h2>
-      <h3>Terms and Conditions</h3>
+      <h3>Alien Terms and Conditions</h3>
       <p>
         Hello Human, when you press the button you are going to space. Get a
         high score and you spend eternity onboard our luxury Mother-Ship. Get a
