fixed the last of the trailing slashes for W3C html validator

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="James Tierney">
-  <meta name="description" content="Learning to code and creating a simple game called Space Spondoolies" />
+  <meta name="description" content="Learning to code and creating a simple game called Space Spondoolies">
 
   <meta name="keywords" content="game, space, spondoolies, fun">
 
@@ -65,7 +65,7 @@
       Reload
     </button>
     <h4 id="user-name-head">Enter User-Name Human!</h4>
-    <input id="user-name" class="" type="text" name="fname" value="Human" /><br />
+    <input id="user-name" class="" type="text" name="fname" value="Human"><br>
   </article>
 
   <!--Alien Terms and Conditions-->
