Final fix to html, an extra >

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       Enter your name, or just be a boring Human....Press: Spin The
       Dice....Updating.....
     </p>
-    <h2 id="bonus-points" class="bonus-hide">Bonus Points!></h2>
+    <h2 id="bonus-points" class="bonus-hide">Bonus Points!</h2>
   </article>
 
   <!--Buttons-->
