Improvement to bonus points, it now works on all double dices

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <button onClick="window.location.reload(true);" id="hide-button" class="my-button-hide my-button">
       Reload
     </button>
-    <h4 id="user-name-head">Enter User-Name Human!</h4>
+    <h4 id="user-name-head" class="">Enter User-Name Human!</h4>
     <input id="user-name" class="" type="text" name="fname" value="Human"><br>
   </article>
 
