--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 
   <!--JavaScript Link-->
   <script src="assets/javascript/main.js"></script>
+  <script src="assets/javascript/quiz.js"></script>
 </body>
 
 </html>
