Adding quiz javascript

--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
     <input id="user-name" class="" type="text" name="fname" value="Human"><br>
   </article>
 
+  <article>
+    <h4>The Quiz</h4>
+    <div id="quiz-quiz"></div>
+    <button id="submit-quiz">Get Results</button>
+    <div id="results-quiz"></div>
+  </article>
+
   <!--Alien Terms and Conditions-->
   <section>
     <h2>Space Spondoolies!</h2>
