basic radio button styling

--- a/index.html
+++ b/index.html
@@ -68,15 +68,16 @@
     <input id="user-name" class="" type="text" name="fname" value="Human"><br>
   </article>
 
-  <article>
-    <h4>The Quiz</h4>
-    <div id="quiz-quiz"></div>
-    <button id="submit-quiz">Get Results</button>
-    <div id="results-quiz"></div>
+  <!--Space Quiz-->
+  <article class="box-full">
+    <h2>Space Quiz</h2>
+    <aside id="quiz-quiz"></aside>
+    <button id="submit-quiz" class="my-button">Space Quiz Results</button>
+    <h3 id="results-quiz"></h3>
   </article>
 
   <!--Alien Terms and Conditions-->
-  <section>
+  <section class="section-box">
     <h2>Space Spondoolies!</h2>
     <h3>Alien Terms and Conditions</h3>
     <p>
