styled The Space Quiz Section

--- a/index.html
+++ b/index.html
@@ -69,12 +69,13 @@
   </article>
 
   <!--Space Quiz-->
-  <article class="box-full">
-    <h2>Space Quiz</h2>
-    <aside id="quiz-quiz"></aside>
+  <section class="section-box">
+    <h2>The Space Quiz</h2>
+    <p class="quiz">[Human Intelligence Test]</p>
+    <div id="quiz-quiz" class="quiz"></div>
+    <h2 id="results-quiz"></h2>
     <button id="submit-quiz" class="my-button">Space Quiz Results</button>
-    <h3 id="results-quiz"></h3>
-  </article>
+  </section>
 
   <!--Alien Terms and Conditions-->
   <section class="section-box">
