error checks and upload before shut down

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </article>
 
   <!--Space Quiz-->
-  <section class="section-box">
+  <section class="section-box" id="hide-section">
     <h2>The Space Quiz</h2>
     <p class="quiz">[Human Intelligence Test]</p>
     <div id="quiz-quiz" class="quiz"></div>
