style section with border on hover, add functio to js click to hide 'alert' pressed

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       Spin The Dice
     </button>
 
-    <button onClick="window.location.reload(true);" id="hide-button" class="my-button-hide my-button">
+    <button onClick="window.location.reload(true); alert = function() {};" id="hide-button" class="my-button-hide my-button">
       Reload
     </button>
     <h4 id="user-name-head" class="">Enter User-Name Human!</h4>
@@ -69,7 +69,7 @@
   </article>
 
   <!--Space Quiz-->
-  <section class="section-box" id="hide-section">
+  <section class="section-box border-white" id="hide-section">
     <h2>The Space Quiz</h2>
     <p class="quiz">[Human Intelligence Test]</p>
     <div id="quiz-quiz" class="quiz"></div>
@@ -78,7 +78,7 @@
   </section>
 
   <!--Alien Terms and Conditions-->
-  <section class="section-box">
+  <section class="section-box border-white">
     <h2>Space Spondoolies!</h2>
     <h3>Alien Terms and Conditions</h3>
     <p>
