--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1>Space Spondoolies!!</h1>
     <h5>
       [Hello You Lucky Human - Like! To Play A Game And Win A Trip In A Space
-      Ship]
+      Ship <em>(Forever)</em>]
     </h5>
   </header>
 
@@ -72,8 +72,8 @@
   <section class="section-box border-white" id="hide-section">
     <h2>The Space Quiz</h2>
     <p class="quiz">[Human Intelligence Test]</p>
-    <div id="quiz-quiz" class="quiz"></div>
-    <h2 id="results-quiz"></h2>
+    <aside id="quiz-quiz" class="quiz para-nth"></aside>
+    <h2 id="results-quiz">-</h2>
     <button id="submit-quiz" class="my-button">Space Quiz Results</button>
   </section>
 
