--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <h5>
                 [Hello You Lucky Human - Like! To Play A Game And Win A Trip In A Space Ship <em>(Forever!)</em>]
             </h5>
+            <p><a href="#terms">[Alien Terms & Conditions]</a></p>
         </header>
 
         <!--Dice One-->
@@ -50,7 +51,8 @@
             <p id="status-report">
                 Enter your name, or just be a boring Human....Press: Spin The
                       Dice....Updating.....
-            </p>
+            </p><br>
+            <p id="space-quiz-report"></p>
             <h2 id="bonus-points" class="bonus-hide">Bonus Points!</h2>
         </article>
 
@@ -75,12 +77,12 @@
             <h2>The Space Quiz</h2>
             <p class="quiz">[Human Intelligence Test]</p>
             <aside id="quiz-quiz" class="quiz para-nth"></aside>
-            <h2 id="results-quiz">.</h2>
+            <h2 id="results-quiz">0</h2>
             <button id="submit-quiz" class="my-button">Space Quiz Results</button>
         </section>
 
         <!--Alien Terms and Conditions-->
-        <section class="section-box border-white">
+        <section class="section-box border-white" id="terms">
             <h2>Space Spondoolies!</h2>
             <h3>Alien Terms and Conditions</h3>
             <p>
@@ -95,8 +97,9 @@
                 <li>Odd Dice Score - Minus Points</li>
                 <li>Throw a Double - Extra 500 Points</li>
                 <li>10,000 Space Spondoolies - A life time of luxury awaits you!</li>
-                <li>Hit -10,000 - It's the Catering Ship. The Star-Ship(<em>Yum Yum</em>)will collect you!
+                <li>-10,000 Space Spondoolies - It's the Catering Ship. The Star-Ship(<em>Yum Yum</em>)will collect you!
                 </li>
+                <li>Score in the Space Quiz and get bonus points in every round of the Dice Throw!!</li>
             </ul>
         </section>
 
