added jump links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Space Spondoolies!</title>
 </head>
 
-<body>
+<body id="top">
     <!--Header-->
     <header>
 
@@ -129,7 +129,7 @@
     <!--Footer-->
     <footer>
 
-        <h2>[Some Day Soon A Space Ship Is Coming For You!]</h2>
+        <h2><a href="#top">[Some Day Soon A Space Ship Is Coming For You!]</a></h2>
 
     </footer>
 
