comments and description for dice.js

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     </footer>
 
     <!--JavaScript Link-->
-    <script src="assets/javascript/main.js"></script>
+    <script src="assets/javascript/dice.js"></script>
     <script src="assets/javascript/quiz.js"></script>
 </body>
 
