Now using dice images, instead of dice numbers

--- a/index.html
+++ b/index.html
@@ -32,16 +32,14 @@
     <!--Dice One-->
     <article class="box-half box-left">
 
-        <h2>Dice One -</h2>
-        <h3 id="dice-one">0</h3>
+        <img src="/assets/images/favicon_io/dice-six-faces-six.png" alt="dice face six" id="dice-one" class="img-dice">
 
     </article>
 
     <!--Dice Two-->
     <article class="box-half box-right">
 
-        <h2>Dice Two -</h2>
-        <h3 id="dice-two">0</h3>
+        <img src="/assets/images/favicon_io/dice-six-faces-six.png" alt="dice face six" id="dice-two" class="img-dice">
 
     </article>
 
