updating default dice image

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     <!--Dice One-->
     <article class="box-half box-left">
 
-        <img src="/assets/images/favicon_io/dice-six-faces-six.png" alt="dice face six" id="dice-one" class="img-dice">
+        <img src="/assets/images/favicon_io/dice-six-faces-one.png" alt="dice face one to six" id="dice-one" class="img-dice">
 
     </article>
 
     <!--Dice Two-->
     <article class="box-half box-right">
 
-        <img src="/assets/images/favicon_io/dice-six-faces-six.png" alt="dice face six" id="dice-two" class="img-dice">
+        <img src="/assets/images/favicon_io/dice-six-faces-one.png" alt="dice face one to six" id="dice-two" class="img-dice">
 
     </article>
 
