Swapping picture dice for new css javascript dice. Fully written in house

--- a/index.html
+++ b/index.html
@@ -32,14 +32,34 @@
     <!--Dice One-->
     <article class="box-half box-left">
 
-        <img src="/assets/images/favicon_io/dice-six-faces-one.png" alt="dice face one to six" id="dice-one" class="img-dice">
+        <div id="dice-one">
+            <div id="dig-1" class="digit-one"></div>
+            <div id="dig-2" class="digit-one"></div>
+            <div id="dig-3" class="digit-one"></div>
+            <div id="dig-4" class="digit-one"></div>
+            <div id="dig-5" class="digit-one"></div>
+            <div id="dig-6" class="digit-one"></div>
+            <div id="dig-7" class="digit-one"></div>
+            <div id="dig-8" class="digit-one"></div>
+            <div id="dig-9" class="digit-one"></div>
+        </div>
 
     </article>
 
     <!--Dice Two-->
     <article class="box-half box-right">
 
-        <img src="/assets/images/favicon_io/dice-six-faces-one.png" alt="dice face one to six" id="dice-two" class="img-dice">
+        <div id="dice-two">
+            <div id="dig-11" class="digit-two"></div>
+            <div id="dig-12" class="digit-two"></div>
+            <div id="dig-13" class="digit-two"></div>
+            <div id="dig-14" class="digit-two"></div>
+            <div id="dig-15" class="digit-two"></div>
+            <div id="dig-16" class="digit-two"></div>
+            <div id="dig-17" class="digit-two"></div>
+            <div id="dig-18" class="digit-two"></div>
+            <div id="dig-19" class="digit-two"></div>
+        </div>
 
     </article>
 
