CSS ajusted to align dice

--- a/index.html
+++ b/index.html
@@ -30,41 +30,39 @@
     </header>
 
     <!--Dice One-->
-    <article class="box-half box-left">
+    <article id="dice-one">
 
-        <div id="dice-one">
-            <div id="dig-1" class="digit-one"></div>
-            <div id="dig-2" class="digit-one"></div>
-            <div id="dig-3" class="digit-one"></div>
-            <div id="dig-4" class="digit-one"></div>
-            <div id="dig-5" class="digit-one"></div>
-            <div id="dig-6" class="digit-one"></div>
-            <div id="dig-7" class="digit-one"></div>
-            <div id="dig-8" class="digit-one"></div>
-            <div id="dig-9" class="digit-one"></div>
-        </div>
+
+            <div class="digit-one"></div>
+            <div class="digit-one"></div>
+            <div class="digit-one"></div>
+            <div class="digit-one"></div>
+            <div class="digit-one"></div>
+            <div class="digit-one"></div>
+            <div class="digit-one"></div>
+            <div class="digit-one"></div>
+            <div class="digit-one"></div>
+
 
     </article>
 
     <!--Dice Two-->
-    <article class="box-half box-right">
+    <article id="dice-two">
 
-        <div id="dice-two">
-            <div id="dig-11" class="digit-two"></div>
-            <div id="dig-12" class="digit-two"></div>
-            <div id="dig-13" class="digit-two"></div>
-            <div id="dig-14" class="digit-two"></div>
-            <div id="dig-15" class="digit-two"></div>
-            <div id="dig-16" class="digit-two"></div>
-            <div id="dig-17" class="digit-two"></div>
-            <div id="dig-18" class="digit-two"></div>
-            <div id="dig-19" class="digit-two"></div>
-        </div>
+            <div class="digit-two"></div>
+            <div class="digit-two"></div>
+            <div class="digit-two"></div>
+            <div class="digit-two"></div>
+            <div class="digit-two"></div>
+            <div class="digit-two"></div>
+            <div class="digit-two"></div>
+            <div class="digit-two"></div>
+            <div class="digit-two"></div>
 
     </article>
 
     <!-- Score Board-->
-    <article id="div-score" class="box-half box-left">
+    <article id="div-score" class="box-half-narrow box-left">
 
         <h2>Space Spondoolies:</h2>
         <h3 id="total-score">0</h3>
@@ -72,7 +70,7 @@
     </article>
 
     <!-- Status Report-->
-    <article id="div-status" class="box-half box-right">
+    <article id="div-status" class="box-half-narrow box-right">
 
         <h2>Status Report:</h2>
         <p id="status-report">
