Corrections to html and css to pass w3c vlaidation

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
 
     <!--Dice One-->
-    <article id="dice-one">
+    <div id="dice-one" class="box-half">
 
 
             <div class="digit-one"></div>
@@ -44,10 +44,10 @@
             <div class="digit-one"></div>
 
 
-    </article>
+    </div>
 
     <!--Dice Two-->
-    <article id="dice-two">
+    <div id="dice-two" class="box-half">
 
             <div class="digit-two"></div>
             <div class="digit-two"></div>
@@ -59,7 +59,7 @@
             <div class="digit-two"></div>
             <div class="digit-two"></div>
 
-    </article>
+    </div>
 
     <!-- Score Board-->
     <article id="div-score" class="box-half-narrow box-left">
